--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-04-26  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
+	* gst/gstbuffer.override:
+	  make Buffer() not use memory it doesn't own
+	* testsuite/test_buffer.py:
+	  check that it doesn't
+
 2005-04-19  Edward Hervey  <bilboed@bilboed.com>
 
 	* gst/gststructure.override: (_wrap_gst_structure_get_double):
