gst/gstbuffer.override: throw TypeError if bufsize < data size. Fixes testsuite
Original commit message from CVS:
* gst/gstbuffer.override:
throw TypeError if bufsize < data size. Fixes testsuite

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-27  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
+	* gst/gstbuffer.override:
+	  throw TypeError if bufsize < data size. Fixes testsuite
+
 2005-04-26  Johan Dahlin  <jdahlin@async.com.br>
 
 	* testsuite/runtests.py: Return exit code 1 if we have any failures
