--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-05-02  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* docs/faq/Makefile.am:
+	* docs/manual/Makefile.am:
+	* docs/manuals.mak:
+	* docs/pwg/Makefile.am:
+	* gst/Makefile.am:
+	  possible fixes for automake-1.5
+
 2005-05-01  Benjamin Otte  <in7y118@public.uni-hamburg.de>
 
 	* gst/elements/gstfakesink.c: (gst_fakesink_change_state):
