do not use GST_PTR_FORMAT on pointers to types smaller than gpointer.  fixes 64 bit testsuite
Original commit message from CVS:
do not use GST_PTR_FORMAT on pointers to types smaller than gpointer.  fixes 64 bit testsuite

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-05-02  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* docs/gst/tmpl/gstconfig.sgml:
+	* gst/gstconfig.h.in:
+	  move documentation for some symbols.  Add doc for GST_PTR_FORMAT
+	* testsuite/debug/printf_extension.c: (main):
+	  Do not use GST_PTR_FORMAT on pointers to types with
+	  sizeof < sizeof(gpointer).  Fixes test on 64-bit
+
 2005-05-02  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* testsuite/caps/deserialize.c: (main):
