--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-05-03  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
+	* testsuite/Makefile.am:
+	  run tests with GST_DEBUG=*:0 so they don't produce any debugging
+	  output
+	* testsuite/test_element.py:
+	  don't disable stderr
+	* gst/gstbuffer.override:
+	  initialize size correctly
+
 2005-05-03  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* testsuite/runtests.py: also return exit code 1 in case of errors
