--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-03  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* testsuite/runtests.py: a much nicer way of getting all the tests
+
 2005-05-03  Benjamin Otte  <in7y118@public.uni-hamburg.de>
 
 	* testsuite/Makefile.am:
