--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,57 @@
-This is GStreamer 0.8.9.
+This is GStreamer 0.8.10, "No Fun".
+
+Changes since 0.8.9:
+
+      * Fixes for 64-bit platforms
+      * Fixes for gcc 4
+      * New translation added: Russian (Peter Astakhov)
+      * Registry now uses libxml for faster startup
+
+API changes since 0.8.9:
+
+* GST_EVENT_COMMON_FLAGS_NEED_RESPONSE has been added, to indicate whether a
+  reply is expected to an upstream event
+* GST_TAG_LANGUAGE_CODE has been added
+* GstChildProxy, a new interface to uniformly access elements' children
+  and their properties, has been added
+
+- API depreciations:
+
+* gst_buffer_set_data was deprecated
+
+Bugs fixed since 0.8.9:
+
+      * 137485 : [strings] Please don't unnecessarily abbreviate in Gstrea...
+      * 147782 : [build] When compiling, CPPFLAGS don't propagate to GTKDO...
+      * 149791 : fdsrc w/o timeout can hang exiting threads
+      * 159676 : [playbin] audible click after 3s of playback using playbin
+      * 161991 : gst_init is slow
+      * 164479 : [cli-tools] gst_parse_launch can't handle spaces
+      * 164821 : [docs] GstLibraryError misses (proper) descriptions
+      * 165354 : Tests failure report for gstreamer 0.8.8
+      * 166073 : [threads] wrong error handling
+      * 166250 : [PATCH] [queue] When two threads are connected with queue...
+      * 166699 : Typo in gstreamer-0.8.9/tools/gst-launch.1.in
+      * 167701 : [PATCH, strings] Please do not split translatable strings...
+      * 168493 : [API] gst_index_factory_new() doesn't increase refcount o...
+      * 168659 : [build] Need to patch gst-element-check-0.8.m4 to check f...
+      * 168703 : [API] Add gst_index_add_associationv() to gstindex.h
+      * 169111 : [API] GstEvent NEED_RESPONSE flag
+      * 169123 : [build] false dependence on libxml2 if registry is enabled
+      * 169405 : [API] GST_TYPE_EVENT and gst_event_get_type unusable befo...
+      * 169732 : gstreamer (element) does not build on cygwin
+      * 170067 : Typefind leaks
+      * 170464 : Bad variable's name mp3player in sample source code
+      * 170499 : spider no decode some .mp3
+      * 171400 : mmapsize property on gstfilesrc borked.
+      * 172526 : gst-register fails on a lot of plugins on MacOSX
+      * 300339 : assertion with gst_pad_relink_filtered
+      * 300736 : Plug a bunch of leaks in the registry code
+      * 300932 : [PATCH] add a GST_ELEMENT_WORK_IN_PLACE flag to gstelement
+      * 301128 : cvs login command line is incorrect in PWG
+      * 301313 : [decodebin] seek while reading (non-existant) ID3v2 tag d...
+      * 301331 : gst_element_unlink only unlinks real pads
+
 
 Changes since 0.8.8:
 
