--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-03  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* configure.ac:
+	  back to CVS
+
 === release 0.8.10 ===
 
 2005-05-03  Thomas Vander Stichele  <thomas at apestaart dot org>
